# npc

./: .gitignore  README.md  pyproject.toml
src/npc/: _version.py  utils.py
src/npc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/npc/logSplines/: __init__.py  knot_allocation.py  log_Psplines.py  logspline_data.py  utils.py
src/npc/npcor/: __init__.py  core.py  input_test.py  mcmc.py  sampler.py  update_weights.py
tests/: LISA_demo.ipynb  LISA_simul_result.ipynb  paper_plots.ipynb  simul_lisa_test.py  test_core_fun.py  test_splines.py
